<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/main_bg"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="100%"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp"
            android:textSize="72px"
            android:textColor="#ffffff"
            android:text="@string/perfect_layout_data"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll23"
        android:layout_below="@id/ll1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="50%"
        app:layout_widthPercent="80%"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlv_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
            <include
                layout="@layout/shop_view_register_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#979797">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/perfect_layout_name_input"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:textSize="22dp"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#979797">
                    <EditText
                        android:id="@+id/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/perfect_layout_age_input"
                        android:textColor="@color/white"
                        android:inputType="number"
                        android:textSize="22dp"
                        android:maxLines="1"
                        android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#979797">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/perfect_layout_email_input"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:textSize="22dp"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.MultiOperationInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:operationTextString="@string/perfect_code"
                app:operationTextSize="20"
                android:id="@+id/phone_moil"
                app:operationType="editTextWithTextView"
                android:textColorHint="#979797">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/perfect_layout_phone_input"
                    android:textColor="@color/white"
                    android:inputType="phone"
                    android:textSize="22dp"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.MultiOperationInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#979797">
                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/perfect_layout_code_input"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:textSize="22dp"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_below="@id/ll23"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/perfect_next"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:background="#F7A01D"
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_widthPercent="80%"/>
    <ImageView
        android:id="@+id/shouye"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/btn_next"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/back"
        android:layout_marginLeft="20dp"
        android:src="@drawable/shouye" />

    <ImageView
        android:id="@+id/back"
        android:layout_below="@+id/btn_next"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        android:src="@drawable/back" />
</android.support.percent.PercentRelativeLayout>