<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:background="@color/white"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp">
            <com.yiyuan.ai.widget.CircleImageView
                android:id="@+id/user_icon_view_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shop_page_register_uphead" />
            <ImageView
                android:id="@+id/gender"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/shop_register_woman_select"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="王宇"
                android:textSize="22dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/text_13_9E9E9E"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_layout_tab1" />

                <TextView
                    style="@style/text_18_4C89DE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="150" />

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="30dp"
                android:background="@color/shop_register_item_line" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/text_13_9E9E9E"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_layout_tab2" />

                <TextView
                    style="@style/text_18_4C89DE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="普通会员" />

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="30dp"
                android:background="@color/shop_register_item_line" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/text_13_9E9E9E"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_layout_tab3" />

                <TextView
                    style="@style/text_18_4C89DE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_btn"
                android:padding="20dp"
                android:textColor="@color/white"
                android:text="@string/info_layout_edit"/>
            <TextView
                android:id="@+id/exit"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_btn"
                android:textColor="@color/white"
                android:padding="20dp"
                android:text="@string/info_layout_close"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>