<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl_register_root"
    android:background="@drawable/main_bg"
    android:layout_height="match_parent">

    <com.aiwinn.base.widget.CameraSurfaceView
        android:id="@+id/csv_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <com.yiyuan.aiwinn.faceattendance.widget.PierceMaskView
        android:id="@+id/pmv_register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
    <ImageView
        android:id="@+id/show_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
    <TextView
    android:layout_centerHorizontal="true"
    android:layout_above="@id/csv_register"
    android:textColor="@color/white"
    android:textSize="25dp"
    android:layout_marginBottom="20dp"
    android:id="@+id/tv_notify"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tv_notify"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:text="@string/ai_main_tab_register"
        android:layout_marginBottom="10dp"
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:src="@drawable/shouye" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_below="@id/csv_register"
       android:gravity="center"
       android:orientation="horizontal"
       android:layout_marginTop="20dp"
       android:layout_height="wrap_content"
       android:id="@+id/linearLayout">
       <TextView
           android:textColor="@color/white"
           android:padding="10dp"
           android:textSize="35dp"
           android:text="@string/register_layout_cancel"
           android:gravity="center"
           android:layout_marginRight="10dp"
           android:background="#F7A01D"
           android:id="@+id/btn_cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
       <TextView
           android:textColor="@color/white"
           android:padding="10dp"
           android:textSize="35dp"
           android:text="@string/register_layout_finish"
           android:gravity="center"
           android:layout_marginLeft="10dp"
           android:background="#F7A01D"
           android:id="@+id/btn_finish"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
   </LinearLayout>
</RelativeLayout>